--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,11 @@ pool:
   vmImage: 'ubuntu-16.04'
 
 steps:
+- bash: rm -rf somefolder
+
 - task: Cache@0
   inputs:
     key: $(Build.SourcesDirectory)/azure-pipelines.yml
     path: somefolder
+
+- bash: echo "$(ls -la)"
