--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,9 @@ pool:
   vmImage: 'ubuntu-16.04'
 
 steps:
-- bash: rm -rf somefolder
+- bash: | 
+   rm -rf somefolder
+   ls -la ../..
 
 - task: Cache@0
   inputs:
