--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,15 +2,7 @@ pool:
   vmImage: 'ubuntu-16.04'
 
 steps:
-- bash: | 
-   rm -rf somefolder
-   ls -la ../..
-
 - task: Cache@0
   inputs:
-    key: $(Build.SourcesDirectory)/azure-pipelines.yml
-    path: $(Build.SourcesDirectory)/somefolder
-
-- bash: |
-    echo "$(ls -la)"
-    echo "$(ls -la $(Agent.WorkFolder) )"
+    key: foo
+    path: somefolder
