--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,11 +2,9 @@ pool:
   vmImage: 'ubuntu-16.04'
 
 steps:
-- bash: rm -rf somefolder
-
 - task: Cache@0
   inputs:
-    key: foo
-    path: somefolder
+    key: $(Build.SourcesDirectory)/package.json
+    path: node_modules
 
-- bash: ls -la
+- bash: npm install
