--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,9 +6,13 @@ container: node:10.16.0-jessie
 steps:
 - bash: du -sh .
 
+- bash: |
+    echo "bsd: $(Build.SourcesDirectory)"
+    echo "##vso[task.setvariable variable=foo]$(Build.SourcesDirectory)"
+
 - task: Cache@0
   inputs:
-    key: $(Build.SourcesDirectory)/package.json
+    key: $(foo)/package.json
     path: node_modules
 
 - bash: du -sh .
